--- a/calculator.css
+++ b/calculator.css
@@ -56,6 +56,11 @@ font-size: 1.5rem;
    
 }
 
+.cancle{
+    background-color: rgb(158, 4, 4);
+    color: white;
+}
+
 .operation{
     background-color: rgb(212, 207, 207);
     border: rgb(211, 205, 205);
