--- a/calculator.css
+++ b/calculator.css
@@ -16,8 +16,8 @@ border-radius: 8%;
 }
 
 .display{
-margin: 1rem 0.5rem;
-width:14rem;
+margin-bottom: 1rem;
+max-width:15rem;
 height: 2.5rem;
 border: 1px solid rgb(168, 167, 167);
 padding: 10px;
@@ -25,19 +25,14 @@ text-align: right;
 border-radius: 60px;
 font-size: 1.5rem;
 }
-
-/* input{
-    border: 0;
-    outline: 0;
-   
-
-} */
+ 
 
 .keys{
     display: grid;
     grid-template-columns: repeat(4, 20.8% );
-    grid-template-rows:repeat(5, 2rem) ;
+    grid-template-rows:repeat(6, 2rem) ;
     grid-template-areas:
+    ". . . ."
     ". . . ."
     "seven eight nine equal"
     "four five six equal"
@@ -45,6 +40,16 @@ font-size: 1.5rem;
     "zero decimal cancle equal";
     column-gap: 0.8rem;
     row-gap: 0.7rem;
+}
+.keys .arrow{
+    background-color: rgb(240, 115, 136);
+    animation: arrow .5s linear infinite;
+}
+
+@keyframes arrow{
+    100%{
+        transform: scale(1.1);
+    }
 }
 
 .equal{
@@ -62,7 +67,7 @@ font-size: 1.5rem;
 }
 
 .operation{
-    background-color: rgb(212, 207, 207);
+    background-color: rgb(182, 176, 176);
     border: rgb(211, 205, 205);
     font-size: 1.5rem;
     border-radius: 15%;
@@ -132,6 +137,17 @@ font-size: 1.5rem;
     
 }
 
+.cancle:hover, 
+.cancle:focus{
+    background-color:rgb(212, 29, 29);
+    color: white;
+    -webkit-animation: calculate .4s ease;
+    animation: calculate .4s ease;
+    animation-fill-mode: forwards;
+
+    
+}
+
 @media all and (max-width:786px) {
     .container{
       /*  width: min(80%, 350px); */
@@ -140,47 +156,10 @@ font-size: 1.5rem;
        width: 15rem;
      
     }
-    .display{
-        width: 11.5rem;
-    }
+    
     .keys{
     display: grid;
     grid-template-columns: repeat(4, 20.8% );
-    grid-template-rows:repeat(5, 2rem) 
+    grid-template-rows:repeat(6, 2rem) 
     }
 }
-/* .seven{
-    grid-area:seven;
-}
-.eight{
-    grid-area:eight;
-} 
-/* .nine{
-    grid-area:nine;
-}
-/* .four{
-    grid-area:four;
-}
-.five{
-    grid-area:five;
-} */
-/* .six{
-    grid-area:six;
-}
-.one{
-    grid-area:one;
-} 
-.two{
-    grid-area:two;
-} 
-.three{
-    grid-area:three;
-} 
-.zero{
-    grid-area:zero;
-}
-.decimal{
-    grid-area:decimal;
-}  */
-
-
